fix default message white spaces and padding of review dialog

--- a/src/main/webapp/app/shared/components/molecules/review-dialog/review-dialog.component.scss
+++ b/src/main/webapp/app/shared/components/molecules/review-dialog/review-dialog.component.scss
@@ -1,7 +1,6 @@
 .review-dialog {
   width: 70%;
   max-width: 50rem;
-  padding: 1rem;
 
   // only for REJECT dialog
   .p-dialog-content.no-overflow {
